fixed keyboard nav on small screens header because I am stupid. Also fixed sizing issue in YKI

--- a/Yo-kai_Info/style.css
+++ b/Yo-kai_Info/style.css
@@ -317,7 +317,6 @@ body:has(#screenCover.open) {overflow: hidden;}
     #yokaiInfoTitle {
         margin-top: 0;
         margin-bottom: 0;
-        font-size: 2em;
         font-weight: 300;
         text-align: center;
         font-family: var(--font-yuruka), sans-serif;
